# emscripten-libtess2

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  package.json
js/: pre.bind.js  pre.js  pre.wrap.js
public/: index.html
src/: tess.c  tess.h  tesselator.cpp  tesselator.h
types/: tess2.wasm.d.ts
